corrected the way the spacings are attached

--- a/src/client/styles/scss/_comment_growi.scss
+++ b/src/client/styles/scss/_comment_growi.scss
@@ -50,7 +50,7 @@
 
   .page-comment-writer {
     @include media-breakpoint-down(xs) {
-      height: 50px;
+      height: 3.5em;
     }
   }
 
@@ -72,8 +72,10 @@
     // コメントセクション
     .page-comment-main {
       @extend %comment-section;
+      @include media-breakpoint-up(sm){
+        margin-left: 4.5em !important;
+      }
       @include media-breakpoint-down(xs) {
-        margin-left: 0em;
         &:before {
           content: none;
         }
